# 3dModel

./: .clang-format  .gitignore  CHANGELOG.txt  CMakeLists.txt  README.md
bin2c/: CMakeLists.txt  target_add_embeded_shaders.cmake
demo/: CMakeLists.txt
demo/d0_hello_triangle/: main.cpp
demo/d10_advanced_camera/: geometry_cube.h  main.cpp
demo/d11_render_to_texture/: geometry_triangle.cpp  geometry_triangle.h  main.cpp  shader_d11_rtt_vertex.glsl  shader_wobbly_texture.glsl
demo/d12_reordering/: main.cpp  shader_d12_color.glsl  shader_d12_transform.glsl
demo/d1_glgears/: draw.cpp  main.cpp
demo/d2_imgui/: main.cpp
demo/d3_imgui/: main.cpp
demo/d4_simple_shader/: main.cpp
demo/d5_simple_shader/: main.cpp
demo/d6_matrices/: main.cpp  shader_d6_transform.glsl
demo/d7_colored_cube/: main.cpp  shader_d7_vertex.glsl
demo/d8_texture_cube/: main.cpp  shader_d8_vertex.glsl  shader_v8_fragment.glsl
demo/d9_geometries/: geometry_cone.h  geometry_cylinder.h  geometry_triangle.cpp  geometry_triangle.h  main.cpp  shader_d9_fragment.glsl
glad-compatible/: CMakeLists.txt
glad-compatible/include/glad/: glad.h
glad-compatible/src/: glad.c
glad-core-3.3/: CMakeLists.txt
glad-core-3.3/include/glad/: glad.h
glad-core-3.3/src/: glad.c
glad-core-4.1/: CMakeLists.txt
glad-core-4.1/include/glad/: glad.h
glad-core-4.1/src/: glad.c
glad-core-4.6/: CMakeLists.txt
glad-core-4.6/include/glad/: glad.h
glad-core-4.6/src/: glad.c
imgui-1.79/: CMakeLists.txt
projects/skeleton_p1/: CMakeLists.txt  comm.cpp  comm.hpp  input1.txt  main.cpp
projects/skeleton_p2/: CMakeLists.txt  main.cpp
projects/skeleton_p3/: CMakeLists.txt  geometry.h  geometry_triangle.cpp  geometry_triangle.h  input1.txt  main.cpp  shader_wobbly_texture.glsl  shading_fragment.glsl  shading_vertex.glsl
util/: CMakeLists.txt  arcball_camera.cpp  arcball_camera.h  util.cpp  util.hpp
